--- a/index.html
+++ b/index.html
@@ -30,63 +30,15 @@
     <section class="banner">
             <h1 class="banner__titulo">Febrero Promocional</h1>
             <p class="banner__contenido">Productos selecionados con 33% de descuento</p>
-            <a href="pages/productos.html"   class="banner__boton" >Ver Consolas</a>
+            <a href="#p"   class="banner__boton" >Ver Consolas</a>
     </section>
 
-    <section class="productos">
-        <div class="producto">
-            <img src="media/img1.jpeg" alt="" class="producto__img">
-            <div class="producto__descripcion">
-                <h4 class="producto__titulo">Producto XYZ</h4>
-                <p class="producto__precio">$60</p>
-                <a href="" class="producto__detalle">ver detalle</a>
-            </div>
-        </div>
-        <div class="producto">
-            <img src="media/img2.jpeg" alt="" class="producto__img">
-            <div class="producto__descripcion">
-                <h4 class="producto__titulo">Producto XYZ</h4>
-                <p class="producto__precio">$60</p>
-                <a href="" class="producto__detalle">ver detalle</a>
-            </div>
-        </div>
-        <div class="producto">
-            <img src="media/unsplash_4OHkK555s1A.png" alt="" class="producto__img">
-            <div class="producto__descripcion">
-                <h4 class="producto__titulo">Producto XYZ</h4>
-                <p class="producto__precio">$60</p>
-                <a href="" class="producto__detalle">ver detalle</a>
-            </div>
-        </div>
-        <div class="producto">
-            <img src="media/unsplash_KeGToDVN0l4.png" alt="" class="producto__img">
-            <div class="producto__descripcion">
-                <h4 class="producto__titulo">Producto XYZ</h4>
-                <p class="producto__precio">$60</p>
-                <a href="" class="producto__detalle">ver detalle</a>
-            </div>
-        </div>
-        <div class="producto">
-            <img src="media/unsplash_0POwK6iAiRQ.png" alt="" class="producto__img">
-            <div class="producto__descripcion">
-                <h4 class="producto__titulo">Producto XYZ</h4>
-                <p class="producto__precio">$60</p>
-                <a href="" class="producto__detalle">ver detalle</a>
-            </div>
-        </div>
-        <div class="producto">
-            <img src="media/unsplash_KeGToDVN0l4.png" alt="" class="producto__img">
-            <div class="producto__descripcion">
-                <h4 class="producto__titulo">Producto XYZ</h4>
-                <p class="producto__precio">$60</p>
-                <a href="" class="producto__detalle">ver detalle</a>
-            </div>
-        </div>
+    <section class="productos" id="p" data-cards>
     </section>
 
     <section class="contacto"></section>
     <footer class="fotter"></footer>
-    
+    <script type="module"  src="controllers/controller-client.js"></script>
    
    
 </body>
