--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>productos</title>
 
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/base.css">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/formulario.css">
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/formLogin.css">
+    <link rel="stylesheet" href="../css/detalle.css">
     <script  src="../js/menu.js"></script>
     <script src="../js/contacto.js"></script>
     <script src="../js/footer.js"></script>
@@ -28,8 +29,20 @@
 <body>
     <header class="cabecera"></header>
 
+    <section class="detalle">
+        <div class="card__detalle">
+            <img src="" alt="" class="img__detalle">
+            <div class="contenido__detalle">
+                <h1 class="titulo__detalle"></h1>
+                <h3 class="precio__detalle"></h3>
+                <p class="d__detalle"></p>
+            </div>
+        </div>
+       
+    </section>
     
     <section class="contacto"></section>
     <footer class="fotter"></footer>
+    <script type="module" src="../controllers/detalle-controller.js"></script>
 </body>
 </html>
