--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -33,7 +33,7 @@
 
     
         <table class="table">
-          <a class="link_admin" href="http://127.0.0.1:5500/pages/admin.html">Crear Producto</a>
+          <a class="link_admin" href="./admin.html">Crear Producto</a>
             <thead>
               <tr>
                 <th class="table__column--p">PRODUCTO</th>
